style tweak to prevent input fields from overlapping other page elements

--- a/style.css
+++ b/style.css
@@ -32,9 +32,7 @@ header h1 {
 
 #inputSection {
   float: left;
-  height: 120px;
   width: 55%;
-  overflow: hidden; 
 }
 
 input {
